Correct alignment and styling

--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,79 +1,23 @@
-.hero-container {
-  display: flex;
-  align-items: center;
-  margin-top: 0;
-  margin-bottom: 0;
-  padding: 5rem 2rem;
-  height: 100vh;
+.main {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
+
 .hero-container img {
+  margin-top: 1em;
+  height: 70vh;
+  border-radius:50%;
   object-fit: none;
-  object-position: 60% 40%;
 }
 
 .hero-heading {
   font-size: 1.5em;
-  text-align: left;
-  margin-right: -150px;
+  text-align: center;
+  margin: 2em;
 }
 
 /*--------------- Media Queries -----------*/
 /*-----------------------------------------*/
-
-@media screen and (max-height: 1024px) {
-  .hero-container {
-    height: 100%;
-  }
-
-  .hero-image img {
-    width: 100%;
-    height: auto;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .hero-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 3rem 1rem;
-    width: 100%;
-  }
-
-  .hero-heading {
-    width: 100%;
-    text-align: center;
-    font-size: 1.5rem;
-    padding: 0 1em;
-    margin-left: 50%;
-    margin-right: 50%;
-    margin-top: 3rem;
-  }
-
-  .hero-image {
-    margin-top: 2rem;
-  }
-
-  .hero-image img {
-    width: 150%;
-    height: auto;
-  }
-
-}
-
-@media screen and (max-width: 360px) {
-
-  .hero-heading {
-    margin-top: 10rem;
-    margin-bottom: -5rem;
-  }
-
-  .hero-heading { font-size: 1.25rem; }
-
-  .hero-image img {
-    width: 200%;
-    height: auto;
-  }
-}
